08 - Microservices/Microservices.APIGateway/04/k8s/sales.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
  namespace: erick-arostegui-cunz-dev
  labels:
    app: sales
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sales
  template:
    metadata:
      labels:
        app: sales
    spec:
      containers:
        - name: sales
          image: default-route-openshift-image-registry.apps.sandbox-m2.ll9k.p1.openshiftapps.com/erick-arostegui-cunz-dev/microservices.apigateway.sale.api:latest
          ports:
            - containerPort: 8080
            
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: sales-service
#  namespace: erick-arostegui-cunz-dev
#  labels:
#    app: sales
#spec:
#  selector:
#    app: sales
#  ports:
#    - protocol: TCP
#      port: 8080
#      targetPort: 8080

#---
#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
#  name: sales-route
#  namespace: erick-arostegui-cunz-dev
#  labels:
#    app: sales
#spec:
#  host: sales.apps.sandbox-m2.ll9k.p1.openshiftapps.com
#  to:
#    kind: Service
#    name: sales-service
#  port:
#    targetPort: 8080
#  tls:
#    termination: edge
