08 - Microservices/Microservices.APIGateway/04/k8s/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: erick-arostegui-cunz-dev
  labels:
    app: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery
          image: default-route-openshift-image-registry.apps.sandbox-m2.ll9k.p1.openshiftapps.com/erick-arostegui-cunz-dev/microservices.apigateway.discoveryservice:latest
          ports:
            - containerPort: 8761
            
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: erick-arostegui-cunz-dev
  labels:
    app: discovery
spec:
  selector:
    app: discovery
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: discovery-route
  namespace: erick-arostegui-cunz-dev
  labels:
    app: discovery
spec:
  host: discovery-server.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: discovery-service
  port:
    targetPort: 8761
  tls:
    termination: edge
